# snake-arena

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
client/: ai_nocollide.py  ai_random.py  ai_search.py  async.py  blocking.py  simple.py  snake.py  view_history.py  view_once.py
client/starter/: ai.py  ai_complete.py  combined.py  visualiser.py  visualiser_complete.py
src/: game.rs  html.rs  lib.rs  main.rs  room.rs
